# CrystalPoint

./: Button.cpp  Button.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerHandler.cpp  ControllerHandler.h  Crystal.cpp  Crystal.h  Crystal.sln  CrystalJohan.cpp  CrystalJohan.h  CrystalJohan.sln  CrystalJohan.vcxproj  CrystalJohan.vcxproj.filters  CrystalPoint.cpp  CrystalPoint.h  CrystalPoint.sln  CrystalPoint.vcxproj  CrystalPoint.vcxproj.filters  Cursor.cpp  Cursor.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Header.h  HeightMap.cpp  HeightMap.h  InitState.cpp  InitState.h  Interface.cpp  Interface.h  Keyboard.h  LevelObject.cpp  LevelObject.h  LoadingScreen.cpp  LoadingScreen.h  LoadingState.cpp  LoadingState.h  (+55 more)
Debug/: CrystalJohan.ilk  vc140.idb
Debug/CrystalJohan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CrystalJohan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
models/: portal_blue.mtl
models/Bob/: Bob.mtl  BobFire.mtl  BobRock.mtl
models/Crystal/: Crystal.mtl
models/Enemies/: Monkey.mtl  Skateboard.mtl  Squid.mtl  SquidFire.mtl  SquidRock.mtl  VincentFire.mtl  VincentRock.mtl
models/Rocks/: Cave1.mtl  DragonWall1.mtl  InvisBall.mtl  Rock10.mtl  Rock4.mtl  Rock5.mtl  Rock6.mtl  Rock7.mtl  Rock8.mtl  Rock9.mtl  SpikeRock1.mtl  SpikeRock2.mtl  SpikeRock3.mtl  SpikeRock4.mtl  SpikeRock5.mtl
models/Teleporter/: Teleporter.mtl
worlds/: fire.json  hell.pdn  ice.json  maze.json  mazeTexture2.pdn  mazeTexture2TheSecond.pdn  rock.json  rockHeightmap.pdn  small.json  world1.json  worlds.json
(+13 files in other folders)
